--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- ================= MAIN APP ================= -->
-    <div id="main" class="hide" style="display:none">
+    <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
         <a data-view="products">Products</a>
@@ -32,7 +32,7 @@
 
       <div class="container">
 
-        <!-- ============ DASHBOARD / HOME ============ -->
+        <!-- ===================== DASHBOARD ===================== -->
         <section id="home">
           <!-- KPIs -->
           <div class="section">
@@ -46,46 +46,50 @@
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country -->
+          <!-- Stock & Ad Spend by Country (global) -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table id="stockByCountryTable" class="table">
+            <table id="stockByCountryTbl" class="table">
               <thead>
                 <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
               </thead>
-              <tbody id="stockByCountryBody"><!-- rows injected --></tbody>
+              <tbody><!-- rows injected by app.js: renderStockAndSpendByCountry() --></tbody>
               <tfoot>
-                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
+                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0</th></tr>
               </tfoot>
             </table>
           </div>
 
-          <!-- Weekly Delivered: editable grid Monday–Sunday by country -->
+          <!-- Weekly Delivered grid -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
               <div class="row wrap">
-                <button id="weeklySave" class="btn">Save</button>
-                <button id="weeklyReset" class="btn danger outline">Reset</button>
+                <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
+                <div class="badge" id="weeklyRange">Week:</div>
+                <button id="weeklyNext" class="btn outline">Next week ▶</button>
+                <button id="wdSave" class="btn">Save</button>
+                <button id="wdReset" class="btn danger">Reset</button>
               </div>
-              <small>The grid shows <b>all countries</b>. Enter delivered pieces per day/country.</small>
+              <small>Grid lists <b>all countries</b> in Settings. Type counts per day/country; totals auto-calc.</small>
             </div>
             <div class="table-scroll">
-              <table id="weeklyTable" class="table compact">
+              <table id="weeklyGrid" class="table compact">
                 <thead id="weeklyHead"><!-- Mon..Sun headers injected --></thead>
                 <tbody id="weeklyBody"><!-- one row per country injected --></tbody>
                 <tfoot>
-                  <tr class="totals"><th>Totals</th>
-                    <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
-                    <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
-                    <th id="wAllT">0</th>
+                  <tr class="totals">
+                    <th>All Countries</th>
+                    <th class="col-total">0</th><th class="col-total">0</th><th class="col-total">0</th>
+                    <th class="col-total">0</th><th class="col-total">0</th><th class="col-total">0</th><th class="col-total">0</th>
+                    <th id="wdGrand">0</th>
                   </tr>
                 </tfoot>
               </table>
             </div>
           </div>
 
-          <!-- Daily Advertising Spend (replace if exists) -->
+          <!-- Daily Advertising Spend (replace) -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -98,13 +102,13 @@
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adSave" class="btn">Save / Replace</button>
+                <button id="adAdd" class="btn">Save / Replace</button>
               </div>
-              <small>Saving again for the same <b>product + platform + country</b> replaces the previous value.</small>
+              <small>Same product+platform+country is <b>replaced</b> (no duplicates).</small>
             </div>
           </div>
 
-          <!-- Stock Movement (Create Shipment) -->
+          <!-- Stock Movement -->
           <div class="section">
             <h2>Stock Movement</h2>
             <div class="card">
@@ -117,31 +121,29 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked as arrived, the system adds to destination and deducts from origin.</small>
+              <small>On arrival: <b>add to destination</b> and <b>deduct from origin</b>.</small>
             </div>
           </div>
 
           <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table" id="shipCK">
+            <table class="table">
               <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-                <th>Departed</th><th>Arrived</th><th>Actions</th>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
-              <tbody id="shipCKBody"><!-- rows --></tbody>
+              <tbody id="shipCKBody"><!-- rows injected --></tbody>
             </table>
           </div>
 
           <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table" id="shipIC">
+            <table class="table">
               <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-                <th>Departed</th><th>Arrived</th><th>Actions</th>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
-              <tbody id="shipICBody"><!-- rows --></tbody>
+              <tbody id="shipICBody"><!-- rows injected --></tbody>
             </table>
           </div>
 
@@ -154,21 +156,54 @@
               <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
-            <table class="table" id="profitCountry">
+            <table class="table" id="profitCountryTable">
               <thead><tr>
                 <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
               </tr></thead>
-              <tbody id="profitCountryBody"><!-- rows --></tbody>
+              <tbody><!-- rows injected --></tbody>
+            </table>
+          </div>
+
+          <!-- To-Do -->
+          <div class="section">
+            <h2>To-Do</h2>
+            <div class="row">
+              <input id="todoText" class="input" placeholder="Task"/>
+              <button id="todoAdd" class="btn">Add</button>
+            </div>
+            <div id="todoList" class="todo-list"><!-- tasks injected --></div>
+          </div>
+
+          <!-- Weekly To-Do -->
+          <div class="section">
+            <h2>Weekly To-Do</h2>
+            <div id="weeklyWrap" class="weeks"><!-- 7 cards injected --></div>
+          </div>
+
+          <!-- Lifetime Product Performance (global) -->
+          <div class="section">
+            <h2>Lifetime Product Performance</h2>
+            <div class="row wrap">
+              <select id="lpProduct" class="input"><option value="">All products</option></select>
+              <input id="lpStart" type="date" class="input"/>
+              <input id="lpEnd" type="date" class="input"/>
+              <button id="lpRun" class="btn">Run</button>
+            </div>
+            <table class="table" id="lifetimeTable">
+              <thead><tr>
+                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
+              <tbody id="lifetimeBody"><!-- rows injected --></tbody>
               <tfoot>
-                <tr class="totals">
-                  <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
+                <tr class="totals"><th colspan="2">Totals</th>
+                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
                 </tr>
               </tfoot>
             </table>
           </div>
         </section>
 
-        <!-- ============ PRODUCTS ============ -->
+        <!-- ===================== PRODUCTS ===================== -->
         <section id="products" style="display:none">
           <h2>Products</h2>
 
@@ -189,10 +224,10 @@
             <tbody><!-- rows injected --></tbody>
           </table>
 
-          <small>Click <b>Open</b> to go to the product’s page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
+          <small>Open page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
-        <!-- ============ PERFORMANCE ============ -->
+        <!-- ===================== PERFORMANCE ===================== -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
 
@@ -207,29 +242,49 @@
               </select>
               <input id="pfStart" type="date" class="input"/>
               <input id="pfEnd" type="date" class="input"/>
-              <select id="pfCountry" class="input"><option value="">All countries</option></select>
+              <select id="pfCountry" class="input">
+                <option value="">All countries</option>
+              </select>
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
               <thead><tr>
-                <th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
+                <th>Product</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
               </tr></thead>
               <tbody><!-- rows injected --></tbody>
             </table>
           </div>
+
+          <!-- Remittance Report (add entries here; view/delete per product page) -->
+          <div class="card">
+            <div class="h">Remittance Report</div>
+            <div class="row wrap">
+              <input id="rStart" type="date" class="input"/>
+              <input id="rEnd" type="date" class="input"/>
+              <select id="rCountry" class="input"></select>
+              <select id="rProduct" class="input"></select>
+              <input id="rOrders" type="number" class="input" placeholder="Orders" min="0"/>
+              <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0"/>
+              <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
+              <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
+              <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
+              <button id="rAdd" class="btn">Add</button>
+            </div>
+            <div id="rMsg" class="muted">Entries appear in each product page and can be deleted there.</div>
+          </div>
         </section>
 
-        <!-- ============ FINANCE ============ -->
+        <!-- ===================== FINANCE ===================== -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
 
-          <!-- Running Balance (all time) -->
+          <!-- Running Balance -->
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
-            <div id="runBalance" class="balance">0.00 USD</div>
+            <div id="feRunning" class="balance">0.00 USD</div>
           </div>
 
-          <!-- Manage Categories -->
+          <!-- Categories (add + delete) -->
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
@@ -243,24 +298,20 @@
             <div class="row cats">
               <div>
                 <h4>Debits</h4>
-                <div id="fcDebits" class="chips"><!-- chips --></div>
+                <div id="fcDebitList" class="chips deletable"><!-- chips with delete buttons --></div>
               </div>
               <div>
                 <h4>Credits</h4>
-                <div id="fcCredits" class="chips"><!-- chips --></div>
+                <div id="fcCreditList" class="chips deletable"><!-- chips with delete buttons --></div>
               </div>
             </div>
           </div>
 
-          <!-- Entries -->
+          <!-- Entries + period filter -->
           <div class="card">
             <div class="h">Entries</div>
             <div class="row wrap">
               <input id="feDate" type="date" class="input"/>
-              <select id="feType" class="input">
-                <option value="debit">Debit</option>
-                <option value="credit">Credit</option>
-              </select>
               <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
@@ -281,25 +332,25 @@
           </div>
         </section>
 
-        <!-- ============ SETTINGS ============ -->
+        <!-- ===================== SETTINGS ===================== -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
 
-          <!-- Countries add/delete (chips show list) -->
+          <!-- Countries add/delete -->
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
               <input id="cty" class="input" placeholder="Add country"/>
               <button id="ctyAdd" class="btn">Add</button>
             </div>
-            <div id="ctyList" class="chips"><!-- list of countries --></div>
+            <div id="ctyList" class="chips deletable"><!-- chips with delete buttons --></div>
           </div>
 
           <!-- Edit Product Info -->
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
-              <select id="epSelect" class="input"><option value="">Select product…</option></select>
+              <select id="editProdSel" class="input"><option value="">Select product…</option></select>
               <input id="epName" class="input" placeholder="Product name"/>
               <input id="epSku" class="input" placeholder="SKU"/>
               <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
@@ -309,25 +360,25 @@
             </div>
           </div>
 
-          <!-- Manual Save / Restore -->
+          <!-- Manual Save / Restore (keeps saves after push) -->
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
               <input id="snapName" class="input" placeholder="Name this snapshot"/>
-              <button id="snapSave" class="btn">Save current system data</button>
+              <button id="ssSave" class="btn">Save current system data</button>
             </div>
             <table class="table">
               <thead><tr><th>Name</th><th>File</th><th>Actions</th></tr></thead>
-              <tbody id="snapList"><!-- rows with Push / Delete buttons --></tbody>
+              <tbody id="ssList"><!-- rows with Push / Delete buttons --></tbody>
             </table>
           </div>
         </section>
 
-      </div><!-- /container -->
-    </div><!-- /main -->
-  </div><!-- /app -->
+      </div><!-- /.container -->
+    </div><!-- /#main -->
+  </div><!-- /#app -->
 
-  <script src="/public/snapshot.js"></script>
+  <!-- JS -->
   <script src="/public/app.js"></script>
 </body>
 </html>
