--- a/product.html
+++ b/product.html
@@ -7,213 +7,84 @@
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
-  <div class="topbar">
-    <a href="/" class="btn outline">← Back</a>
-    <div class="spacer"></div>
-    <a id="logoutLink" class="btn outline">Logout</a>
-  </div>
+  <div class="container narrow">
+    <a class="btn outline" href="/">← Back to Dashboard</a>
 
-  <main class="container">
-    <!-- Header -->
-    <header class="section">
-      <h1 id="pdTitle">Product</h1>
-      <div id="pdSku" class="muted"></div>
-      <div id="pdTransitBadge" class="badge">Transit total: 0</div>
-    </header>
+    <h1 id="pTitle">Product</h1>
 
-    <!-- 1) Stock & Ad Spend by Country (THIS product only) -->
-    <section class="section">
+    <!-- Stock & Ad Spend (per product, per country; China excluded) -->
+    <div class="section">
       <h2>Stock &amp; Ad Spend by Country</h2>
-      <table class="table">
-        <thead><tr>
-          <th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th>
-        </tr></thead>
-        <tbody id="pdStockBody"><!-- rows injected by app.js: renderProductStockAd() --></tbody>
+      <table class="table" id="pStockTable">
+        <thead>
+          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+        </thead>
+        <tbody id="pStockBody"><!-- rows --></tbody>
         <tfoot>
-          <tr class="totals">
-            <th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th>
-          </tr>
+          <tr class="totals"><th>Totals</th><th id="pStockT">0</th><th id="pAdT">0</th></tr>
         </tfoot>
       </table>
-    </section>
+    </div>
 
-    <!-- 2) Profit + Advertising Budget (manual, per country) -->
-    <section class="section">
-      <h2>Profit + Advertising Budget (manual, per country)</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdPBCountry" class="input"></select>
-          <input id="pdPBValue" type="number" class="input" min="0" step="0.01" placeholder="Budget (USD)"/>
-          <button id="pdPBSave" class="btn">Save</button>
-        </div>
-      </div>
-      <table class="table">
-        <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
-        <tbody id="pdPBBBody"><!-- rows via renderPBTable() --></tbody>
-      </table>
-    </section>
-
-    <!-- 3) Daily Advertising Spend (replace by product+country+platform) -->
-    <section class="section">
-      <h2>Daily Advertising Spend</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdAdCountry" class="input"></select>
-          <select id="pdAdPlatform" class="input">
-            <option value="facebook">Facebook</option>
-            <option value="tiktok">TikTok</option>
-            <option value="google">Google</option>
-          </select>
-          <input id="pdAdAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
-          <button id="pdAdSave" class="btn">Save / Replace</button>
-        </div>
-        <small>Same product+country+platform is replaced. These totals feed the Ad Spend columns above.</small>
-      </div>
-      <table class="table">
-        <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
-        <tbody id="pdAdBody"><!-- list via renderProductAdList() --></tbody>
-      </table>
-    </section>
-
-    <!-- 4) Remittance entries (for this product) -->
-    <section class="section">
-      <h2>Remittance Entries (This Product)</h2>
-      <p class="muted">Add new entries in: <b>Performance → Remittance Report</b>. You can delete entries here.</p>
-      <table class="table">
-        <thead><tr>
-          <th>Period</th><th>Country</th><th>Orders</th><th>Pieces</th><th>Revenue</th>
-          <th>Ad Spend</th><th>Extra/pc</th><th>Profit*</th><th></th>
-        </tr></thead>
-        <tbody id="pdRBody"><!-- via renderProductRemittances() --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th colspan="4">Totals</th>
-            <th id="pdRRevT">0</th><th id="pdRAdT">0</th><th id="pdRExtraT">0</th><th id="pdRProfitT">0</th><th></th>
-          </tr>
-        </tfoot>
-      </table>
-      <small class="muted">*Profit column here is revenue − ad spend − (extra/pc × pieces). Base product cost is included in Lifetime section below.</small>
-    </section>
-
-    <!-- 5) Stock Movement (This Product) -->
-    <section class="section">
-      <h2>Stock Movement</h2>
-      <div class="card">
-        <div class="row wrap">
-          <select id="pdMvFrom" class="input"></select>
-          <span>→</span>
-          <select id="pdMvTo" class="input"></select>
-          <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
-          <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-          <button id="pdMvAdd" class="btn">Add Movement</button>
-        </div>
-        <small>On arrival: <b>add to destination</b> and <b>deduct from origin</b>.</small>
-      </div>
-    </section>
-
-    <!-- 6) Transit (China→Kenya) for this product -->
-    <section class="section">
-      <h2>Transit (China → Kenya)</h2>
-      <table class="table">
+    <!-- Transit (this product only). China allowed here. -->
+    <div class="section">
+      <h2>Transit (This Product)</h2>
+      <table class="table" id="pShipTable">
         <thead><tr>
           <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
         </tr></thead>
-        <tbody id="pdShipCKBody"><!-- via renderProductTransit() --></tbody>
+        <tbody id="pShipBody"><!-- rows --></tbody>
       </table>
-    </section>
+    </div>
 
-    <!-- 7) Transit (Inter-country) for this product -->
-    <section class="section">
-      <h2>Transit (Inter-country)</h2>
-      <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-        </tr></thead>
-        <tbody id="pdShipICBody"><!-- via renderProductTransit() --></tbody>
-      </table>
-    </section>
-
-    <!-- 8) Lifetime (This Product) -->
-    <section class="section">
-      <h2>Lifetime (This Product)</h2>
-      <div class="row wrap">
-        <input id="pdLPStart" type="date" class="input"/>
-        <input id="pdLPEnd" type="date" class="input"/>
-        <button id="pdLPRun" class="btn">Run</button>
-      </div>
-      <table class="table">
-        <thead><tr>
-          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping (extra)</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-        </tr></thead>
-        <tbody id="pdLPBody"><!-- via renderProductLifetime() --></tbody>
-        <tfoot>
-          <tr class="totals">
-            <th>Totals</th>
-            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
-            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
-          </tr>
-        </tfoot>
-      </table>
-    </section>
-
-    <!-- 9) Influencers -->
-    <section class="section">
+    <!-- Influencers -->
+    <div class="section">
       <h2>Influencers</h2>
 
-      <!-- Add influencer -->
       <div class="card">
         <div class="h">Add Influencer</div>
         <div class="row wrap">
-          <input id="pdInfName" class="input" placeholder="Name"/>
-          <input id="pdInfSocial" class="input" placeholder="Social handle"/>
-          <select id="pdInfCountry" class="input"></select>
-          <button id="pdInfAdd" class="btn">Add Influencer</button>
+          <input id="infName" class="input" placeholder="Name"/>
+          <input id="infSocial" class="input" placeholder="@handle"/>
+          <select id="infCountry" class="input" data-exclude="china"></select>
+          <button id="infAdd" class="btn">Add</button>
         </div>
       </div>
 
-      <!-- Add spend -->
       <div class="card">
-        <div class="h">Add Influencer Spend</div>
+        <div class="h">Record Influencer Spend</div>
         <div class="row wrap">
-          <input id="pdInfDate" type="date" class="input"/>
-          <select id="pdInfSelect" class="input"><!-- influencers filled by renderInfluencers() --></select>
-          <select id="pdInfCountrySpend" class="input"><!-- optional override; fallback to influencer.country --></select>
-          <input id="pdInfAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
-          <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+          <input id="isDate" type="date" class="input"/>
+          <select id="isInf" class="input"></select>
+          <select id="isCountry" class="input" data-exclude="china"></select>
+          <input id="isAmt" type="number" class="input" placeholder="Amount (USD)" step="0.01"/>
+          <button id="isAdd" class="btn">Save</button>
         </div>
       </div>
 
-      <!-- Filter + table -->
-      <div class="card">
-        <div class="h">Filter</div>
-        <div class="row wrap">
-          <input id="pdInfStart" type="date" class="input"/>
-          <input id="pdInfEnd" type="date" class="input"/>
-          <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-          <button id="pdInfRun" class="btn">Run</button>
-        </div>
-      </div>
+      <table class="table" id="isTable">
+        <thead><tr><th>Date</th><th>Influencer</th><th>Country</th><th>Amount</th><th></th></tr></thead>
+        <tbody><!-- rows --></tbody>
+      </table>
+    </div>
 
+    <!-- Lifetime (this product, by country) -->
+    <div class="section">
+      <h2>Lifetime – This Product</h2>
       <table class="table">
-        <thead><tr>
-          <th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th></th>
-        </tr></thead>
-        <tbody id="pdInfBody"><!-- rows via renderInfluencers() --></tbody>
+        <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+        <tbody id="plifeBody"><!-- rows --></tbody>
         <tfoot>
-          <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
+          <tr class="totals"><th>Totals</th>
+            <th id="plRevT">0</th><th id="plAdT">0</th><th id="plShipT">0</th><th id="plBaseT">0</th><th id="plPiecesT">0</th><th id="plProfitT">0</th>
+          </tr>
         </tfoot>
       </table>
+    </div>
 
-      <!-- Influencer list (with delete) -->
-      <div class="card">
-        <div class="h">All Influencers</div>
-        <div id="pdInfList" class="chips deletable"><!-- built by renderInfluencers(); chips have data-del-influencer --></div>
-        <small class="muted">Deleting an influencer removes all their spends for this product across the system.</small>
-      </div>
-    </section>
-  </main>
+  </div>
 
-  <!-- JS -->
   <script src="/public/app.js"></script>
+  <script src="/public/snapshot.js"></script>
 </body>
 </html>
