--- a/product.html
+++ b/product.html
@@ -3,87 +3,195 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EAS Tracker – Product</title>
+  <title>EAS Tracker — Product</title>
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
-  <div class="container narrow">
-    <a class="btn outline" href="/">← Back to Dashboard</a>
+  <div class="container">
 
-    <h1 id="pTitle">Product</h1>
+    <nav class="nav">
+      <a href="/" class="active">← Dashboard</a>
+      <span class="nav-right"><a id="logoutLink" href="#" title="Logout">Logout</a></span>
+    </nav>
 
-    <!-- Stock & Ad Spend (per product, per country; China excluded) -->
-    <div class="section">
+    <!-- Header -->
+    <header class="section">
+      <h1 id="pdTitle">Product</h1>
+      <div id="pdSku" class="muted"></div>
+      <div class="badge" id="pdTransitBadge">Transit total: 0</div>
+    </header>
+
+    <!-- 1) Stock & Ad Spend by Country (this product only; China excluded from spend by JS) -->
+    <section class="section">
       <h2>Stock &amp; Ad Spend by Country</h2>
-      <table class="table" id="pStockTable">
+      <table class="table">
         <thead>
           <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
         </thead>
-        <tbody id="pStockBody"><!-- rows --></tbody>
+        <tbody id="pdStockBody"><!-- rows injected --></tbody>
         <tfoot>
-          <tr class="totals"><th>Totals</th><th id="pStockT">0</th><th id="pAdT">0</th></tr>
+          <tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr>
         </tfoot>
       </table>
-    </div>
+    </section>
 
-    <!-- Transit (this product only). China allowed here. -->
-    <div class="section">
-      <h2>Transit (This Product)</h2>
-      <table class="table" id="pShipTable">
+    <!-- 2) Profit + Advertising Budget (manual, per country) -->
+    <section class="section">
+      <h2>Profit + Advertising Budget (manual, per country)</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdPBCountry" class="input"></select>
+          <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" step="0.01" min="0"/>
+          <button id="pdPBSave" class="btn">Save Budget</button>
+        </div>
+      </div>
+      <table class="table">
+        <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
+        <tbody id="pdPBBBody"><!-- rows w/ Clear buttons --></tbody>
+      </table>
+      <small class="muted">Note: These values are manual references only; they don’t auto-calc from spends.</small>
+    </section>
+
+    <!-- 3) Daily Advertising Spend (replace: product+platform+country) -->
+    <section class="section">
+      <h2>Daily Advertising Spend</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdAdPlatform" class="input">
+            <option value="facebook">Facebook</option>
+            <option value="tiktok">TikTok</option>
+            <option value="google">Google</option>
+          </select>
+          <select id="pdAdCountry" class="input"></select>
+          <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+          <button id="pdAdSave" class="btn">Save/Replace</button>
+        </div>
+        <small class="muted">Saving again for the same platform + country replaces the previous value for this product.</small>
+      </div>
+
+      <table class="table">
+        <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
+        <tbody id="pdAdBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
+
+    <!-- 4) (Remittance add/edit lives on Performance screen as requested) -->
+
+    <!-- 5) Stock Movement for this Product (China allowed here) -->
+    <section class="section">
+      <h2>Stock Movement (This Product)</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdMvFrom" class="input"></select>
+          <span>→</span>
+          <select id="pdMvTo" class="input"></select>
+          <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
+          <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+          <button id="pdMvAdd" class="btn">Add Movement</button>
+        </div>
+        <small>When you later mark a shipment as arrived, stock is added at destination and deducted from origin.</small>
+      </div>
+    </section>
+
+    <!-- 6) Transit: China → Kenya (this product) -->
+    <section class="section">
+      <h2>Transit (China → Kenya)</h2>
+      <table class="table">
         <thead><tr>
           <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
         </tr></thead>
-        <tbody id="pShipBody"><!-- rows --></tbody>
+        <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
       </table>
-    </div>
+    </section>
 
-    <!-- Influencers -->
-    <div class="section">
-      <h2>Influencers</h2>
-
-      <div class="card">
-        <div class="h">Add Influencer</div>
-        <div class="row wrap">
-          <input id="infName" class="input" placeholder="Name"/>
-          <input id="infSocial" class="input" placeholder="@handle"/>
-          <select id="infCountry" class="input" data-exclude="china"></select>
-          <button id="infAdd" class="btn">Add</button>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="h">Record Influencer Spend</div>
-        <div class="row wrap">
-          <input id="isDate" type="date" class="input"/>
-          <select id="isInf" class="input"></select>
-          <select id="isCountry" class="input" data-exclude="china"></select>
-          <input id="isAmt" type="number" class="input" placeholder="Amount (USD)" step="0.01"/>
-          <button id="isAdd" class="btn">Save</button>
-        </div>
-      </div>
-
-      <table class="table" id="isTable">
-        <thead><tr><th>Date</th><th>Influencer</th><th>Country</th><th>Amount</th><th></th></tr></thead>
-        <tbody><!-- rows --></tbody>
-      </table>
-    </div>
-
-    <!-- Lifetime (this product, by country) -->
-    <div class="section">
-      <h2>Lifetime – This Product</h2>
+    <!-- 7) Transit: Inter-country (this product) -->
+    <section class="section">
+      <h2>Transit (Inter-country)</h2>
       <table class="table">
-        <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
-        <tbody id="plifeBody"><!-- rows --></tbody>
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+        </tr></thead>
+        <tbody id="pdShipICBody"><!-- rows injected --></tbody>
+      </table>
+    </section>
+
+    <!-- 8) Lifetime (This Product) by Country + totals -->
+    <section class="section">
+      <h2>Lifetime (This Product)</h2>
+      <div class="row wrap">
+        <input id="pdLPStart" type="date" class="input"/>
+        <input id="pdLPEnd" type="date" class="input"/>
+        <button id="pdLPRun" class="btn">Run</button>
+      </div>
+      <table class="table">
+        <thead><tr>
+          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+        </tr></thead>
+        <tbody id="pdLPBody"><!-- rows injected --></tbody>
         <tfoot>
-          <tr class="totals"><th>Totals</th>
-            <th id="plRevT">0</th><th id="plAdT">0</th><th id="plShipT">0</th><th id="plBaseT">0</th><th id="plPiecesT">0</th><th id="plProfitT">0</th>
+          <tr class="totals">
+            <th>Totals</th>
+            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th><th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
           </tr>
         </tfoot>
       </table>
-    </div>
+    </section>
+
+    <!-- 9) Influencers (add, delete influencer, add spend, filter; China hidden by JS) -->
+    <section class="section">
+      <h2>Influencers</h2>
+
+      <!-- Add an influencer -->
+      <div class="card">
+        <div class="h">Add Influencer</div>
+        <div class="row wrap">
+          <input id="pdInfName" class="input" placeholder="Name"/>
+          <input id="pdInfSocial" class="input" placeholder="Social handle"/>
+          <select id="pdInfCountry" class="input"></select>
+          <button id="pdInfAdd" class="btn">Add</button>
+        </div>
+      </div>
+
+      <!-- Current influencers list with delete -->
+      <div class="card">
+        <div class="h">Manage Influencers</div>
+        <div id="pdInfList" class="chips deletable"><!-- chips with delete buttons injected by app.js (we'll fill from /api/influencers) --></div>
+        <small class="muted">Deleting an influencer removes all their spends from the system.</small>
+      </div>
+
+      <!-- Add spend for influencer -->
+      <div class="card">
+        <div class="h">Add Influencer Spend</div>
+        <div class="row wrap">
+          <input id="pdInfDate" type="date" class="input"/>
+          <select id="pdInfSelect" class="input"><!-- influencers injected --></select>
+          <select id="pdInfCountry" class="input"></select>
+          <input id="pdInfAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+          <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+        </div>
+      </div>
+
+      <!-- Filter & table -->
+      <div class="card">
+        <div class="h">Spends (Filter)</div>
+        <div class="row wrap">
+          <input id="pdInfStart" type="date" class="input"/>
+          <input id="pdInfEnd" type="date" class="input"/>
+          <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+          <button id="pdInfRun" class="btn outline">Run</button>
+          <div class="badge">Total: <span id="pdInfTotal">0</span> USD</div>
+        </div>
+
+        <table class="table">
+          <thead><tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th></th></tr></thead>
+          <tbody id="pdInfBody"><!-- rows with delete spend buttons --></tbody>
+        </table>
+      </div>
+    </section>
 
   </div>
 
+  <!-- scripts -->
   <script src="/public/app.js"></script>
   <script src="/public/snapshot.js"></script>
 </body>
